--- a/src/app/shared/components/side-navigation-menu/side-navigation-menu.component.scss
+++ b/src/app/shared/components/side-navigation-menu/side-navigation-menu.component.scss
@@ -6,7 +6,8 @@
   flex-direction: column;
   min-height: 100%;
   height: 100%;
-  width: 270px !important;
+  //## Size for width menu
+  width: 290px !important;
 
   .menu-container {
     min-height: 90%;
