actualizacion disponibilidad resumen, tractos y operadores

--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -435,6 +435,7 @@
             <dxi-column dataField="fechaCierre" caption="CIERRE" dataType="date" format="dd/MM/yyyy" [width]="140" ></dxi-column>
             <dxi-column dataField="fechA_VENCIMIENTO" caption="VENCIMIENTO" dataType="date" format="dd/MM/yyyy" [width]="140"></dxi-column>
             <dxi-column dataField="diasVencimiento" caption="VENCIDOS" alignment="right" [width]="130"></dxi-column>
+            <dxi-column dataField="diasVencimientoCP" caption="VENCIDOS CP" alignment="right" [width]="130"></dxi-column>
             <dxi-column dataField="" caption="" [width]="10"></dxi-column>
 
             <!-- <dxi-column dataField="remision" caption="REMISIÓN" [width]="250"></dxi-column>
