actualizacion disponibilidad pestañas

--- a/src/app/pages/disponibilidad/disponiblidad.component.scss
+++ b/src/app/pages/disponibilidad/disponiblidad.component.scss
@@ -59,3 +59,7 @@
 ::ng-deep .dx-scrollable-scroll-content { 
   background-color:gray !important; /* optional if you want to change the color */
 }
+
+.styleButton{
+  padding-top: 1.5em;
+}
