--- a/src/app/pages/disponibilidad/disponiblidad.component.html
+++ b/src/app/pages/disponibilidad/disponiblidad.component.html
@@ -1,4 +1,4 @@
-<h2 class="content-block">Indicador de Diponibilidad</h2>
+<h2 class="content-block">Indicador de Disponibilidad</h2>
 <div [id]="'myDiv'" class="content-block dx-card responsive-paddings">
     <br><br>
 
